✨ api: users, rooms
